# photag

./: Cargo.toml  Makefile
src/: gui.rs  image.rs  main.rs  photodata.rs  save.rs
