[package]
name = "photag"
version = "0.1.0"
edition = "2021"
description = "web公開をする画像にidを振って撮影データなどを記録したjsonファイルを生成する"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
chrono = {version = "0.4.22", features = ["serde"]}
clap = { version = "3.2.14", features = ["derive"] }
eframe = {git = "https://github.com/emilk/egui", rev="12dc61e"}
egui_extras = { git = "https://github.com/emilk/egui", rev="12dc61e", features = ["image"] }
image = { version = "0.24.3", features = ["jpeg", "png"] }
kamadak-exif = "0.5.4"
mozjpeg = "0.9.4"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
